--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body {
     font-family: "Raleway", sans-serif;
-    width:auto;
+    width: 100%;
+    height: auto;
     margin: auto;
 }
 
@@ -9,6 +10,7 @@ h3 {
 }
 
 /*HEADER*/
+
 header {
     margin-bottom: 3%;
     margin-top: 1%;
@@ -47,7 +49,7 @@ a:visited {
 a:hover {
     border-top: #0065FC solid;
     border-width: 2px;
-    padding-top: 38px;
+    padding-top: 35px;
     color: #0065FC;
 }
 
@@ -56,8 +58,8 @@ a:active {
 }
 
 
-
 /*Section recherche*/
+
 h2 {
     font-size: 15px;
 }
@@ -70,24 +72,29 @@ h2 {
     float: left;
 }
 
-#Barre {
+#barre {
     font-size: 20px;
     float: left;
     color: black;
     height: 43px;
+    border: F2F2F2 solid;
+    border-width: 1px;
 }
 
-#Bouton {
-    font-size: 20px;
+#bouton {
     background-color: #0065FC;
+    font-size: 20px;
     float: left;
     color: white;
     height: 43px;
+    border: 15px solid;
+    border-color: #0065FC;
+    justify-content: center;
+    border: #0065FC;
 }
 
-
-
 /*Filtres*/
+
 #filtres {
     display: flex;
     flex-wrap: wrap;
@@ -103,11 +110,12 @@ h2 {
     border-color: #DEEBFF ;
     border-left-color: transparent;
     margin-right: 20px;
-    height: 30px;
+    height: 35px;
 }
 
 #filtres div i {
-    font-size: 20px 20px 20px 20px;
+    max-width: 40%;
+	height: auto;
     color:#0065FC;
     border: 10px solid;
     border-radius: 50%;
@@ -135,6 +143,7 @@ h2 {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
+    width: 100%;
 }
 
 /*Hébergements*/
@@ -143,16 +152,39 @@ h2 {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    width: 1000px;
+    background-color:#F2F2F2;
+    padding: 1.5%;
+    width: 60%;
+    height: auto;
+    border-radius: 20px 20px 20px 20px;
+    margin: 1%;
+    justify-content: center;
+}
+
+#presentation h1 {
+    display: flex;
+    align-items: flex-start;
 }
 
 .images {
     display: flex;
-    flex-direction: column;
-    width : 200px; 
-    height : 200px;
+    flex-direction: row;
+    flex-wrap: wrap;
     border: white solid;
+    background-color: white;
     border-radius: 20px 20px 20px 20px;
+    width: 100%;
+    height:auto;
+    max-width: 300px;
+    margin: 2%;
+}
+
+.images img {
+    width: 100%;
+    max-height: 100px;
+    height: 100%;
+    border: white solid;
+    border-radius: 20px 20px 0 0;
 }
 
 /*Populaires*/
@@ -161,24 +193,45 @@ h2 {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
+    background-color:#F2F2F2;
+    width: 25%;
+    border-radius: 20px 20px 20px 20px;
+    padding: 1.5%;
+    justify-content: center;
+    height: auto;
+    min-width: 250px;  
 }
 
 #entete {
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: space-between;
+    padding: 1%;
 }
 
 .imagescote {
     display: flex;
     flex-direction: row;
-    width : 200px; 
-    height : 200px;
     border: white solid;
+    background-color: white;
     border-radius: 20px 20px 20px 20px;
+    width: 100%;
+    height: auto;
+    margin-bottom: 10%;
+    
 }
 
-/*activités*/
+.imagescote img {
+    width: 100%;
+    max-height: 100px;
+    height: 100%;
+    border: white solid;
+    border-radius: 20px 0 0 20px;
+    float: left;
+}
+
+/*Activités*/
 
 #activités {
     display: flex;
@@ -188,23 +241,42 @@ h2 {
 
 .grandesimages {
     display: flex;
-    flex-direction: column;
-    width : 300px; 
-    height : 300px;
+    flex-direction: row;
+    flex-wrap: wrap;
     border: white solid;
+    background-color: white;
+    height: auto;
     border-radius: 20px 20px 20px 20px;
+}
+
+.grandesimages img {
+    width: 100%;
+    max-height: 100px;
+    height: 100%;
+    border: white solid;
+    border-radius: 20px 20px 0 0;
 }
 
 .moyimages {
     display: flex;
-    flex-direction: column;
-    width : 300px;
-    height : 300px;
+    flex-direction: row;
+    flex-wrap: wrap;
+	height: auto;
     border: white solid;
+    background-color: white;
     border-radius: 20px 20px 20px 20px;
 }
 
+.moyimages img {
+    width: 100%;
+    max-height: 100px;
+    height: 100%;
+    border: white solid;
+    border-radius: 20px 20px 0 0;
+}
+
 /*FOOTER*/
+
 footer {
     margin: 0 0 20px 0;
     background-color: #F2F2F2;
