--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,7 @@ nav img {
 nav li {
     margin: 0 10px 0 20px;
     color: #0065FC;
+    font-size: bold;
 }
 
 
@@ -42,21 +43,26 @@ nav li a {
     text-decoration: none;
 }
 
-a:visited {
+
+a.bouton1:visited {
     color: black;
 }
 
-a:hover {
+a.bouton1:hover {
     border-top: #0065FC solid;
     border-width: 2px;
-    padding-top: 35px;
+    padding-top: 30px;
     color: #0065FC;
 }
 
-a:active {
+a.bouton1:active {
     color: #0065FC;
 }
 
+a.inscrire:visited {
+    color: #0065FC;
+    font-size: bolder;
+}
 
 /*Section recherche*/
 
@@ -68,7 +74,7 @@ h2 {
     border: 15px solid;
     border-radius: 10px 0 0 10px;
     border-color: #F2F2F2;
-    font-size: 12px;
+    font-size: 15px;
     float: left;
 }
 
@@ -77,21 +83,33 @@ h2 {
     float: left;
     color: black;
     height: 43px;
-    border: F2F2F2 solid;
+    border: #F2F2F2 solid;
     border-width: 1px;
+    outline: none;
 }
 
 #bouton {
     background-color: #0065FC;
-    font-size: 20px;
     float: left;
     color: white;
     height: 43px;
+    width: 100px;
     border: 15px solid;
     border-color: #0065FC;
+    border-radius: 0 10px 10px 0;
     justify-content: center;
     border: #0065FC;
+    font-weight: bold;
+    font-size: 14px;
 }
+
+#bouton:active {
+    box-shadow: inset 2px 2px white;
+    height: 40px;
+    width: 95px;
+    border-radius: 0 10px 7px 0;
+}
+
 
 /*Filtres*/
 
@@ -101,6 +119,7 @@ h2 {
     align-items: center;
     margin: 30px 20px 20px 10px;
 }
+
 
 #filtres div {
     display: flex;
@@ -149,21 +168,20 @@ h2 {
 /*Hébergements*/
 
 #presentation {
-    display: flex;
+    display:flex;
     flex-wrap: wrap;
-    flex-direction: row;
     background-color:#F2F2F2;
-    padding: 1.5%;
     width: 60%;
     height: auto;
     border-radius: 20px 20px 20px 20px;
-    margin: 1%;
-    justify-content: center;
+    margin-right: 2%;
 }
 
-#presentation h1 {
+#vignettes {
     display: flex;
-    align-items: flex-start;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
 }
 
 .images {
@@ -199,7 +217,8 @@ h2 {
     padding: 1.5%;
     justify-content: center;
     height: auto;
-    min-width: 250px;  
+    min-width: 250px;
+    
 }
 
 #entete {
@@ -207,7 +226,7 @@ h2 {
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    padding: 1%;
+    margin: 1%;
 }
 
 .imagescote {
@@ -224,7 +243,7 @@ h2 {
 
 .imagescote img {
     width: 100%;
-    max-height: 100px;
+    max-height: 150px;
     height: 100%;
     border: white solid;
     border-radius: 20px 0 0 20px;
