--- a/styles.css
+++ b/styles.css
@@ -196,21 +196,17 @@ a.bouton2.i:hover {
     flex-wrap: wrap;
     justify-content: space-between;
     flex-direction: row;
-    width: 100%;
-    align-items: center;
 }
 
 /*Hébergements*/
 
 #presentation {
-    display:flex;
+    display: flex;
     flex-wrap: wrap;
     background-color:#F2F2F2;
     width: 65%;
-    height: auto;
     border-radius: 20px 20px 20px 20px;
     min-width: 350px;
-    height: auto;
 }
 
 #presentation h1 {
@@ -241,7 +237,8 @@ a.images {
     border-radius: 20px 20px 20px 20px;
     width: 100%;
     min-width: 300px;
-    min-height: 270px;
+    min-height: 180px;
+    max-height: 236px;
     max-width: 300px;
     text-decoration: none;
     color: black;
@@ -251,11 +248,24 @@ a.images {
 
 a.images img {
     width: 100%;
-    height: 70%;
+    height: 100%;
     max-height: 135px;
     border: white solid;
     border-radius: 20px 20px 0 0;
     object-fit: cover;
+}
+
+.description {
+    margin-left: 7%;;
+    margin-top: -4%;
+}
+
+.description span {
+    font-weight: bold;
+}
+
+.titrehébergement {
+    font-weight: bolder;
 }
 
 #presentation h3 a {
@@ -264,9 +274,10 @@ a.images img {
 }
  
 .etoiles {
+    margin-top: -4%;
+    margin-bottom: 3%;
     display: flex;
     flex-direction: row;
-    
 }
 
 .etoilespleines {
@@ -286,7 +297,6 @@ a.images img {
     flex-direction: column;
     background-color:#F2F2F2;
     align-items: center;
-    justify-content: space-between;
     width: 30%;
     border-radius: 20px 20px 20px 20px;
     min-width: 350px;
@@ -295,7 +305,10 @@ a.images img {
 #entete {
     display: flex;
     flex-direction: row;
-
+    align-items: center;
+    justify-content: space-between;
+    margin-left: 10%;
+    margin-right: 10%;
 }
 
 a.imagescote {
@@ -304,18 +317,14 @@ a.imagescote {
     border: white solid;
     background-color: white;
     border-radius: 20px 20px 20px 20px;
-    height: auto;
     text-decoration: none;
     color: black;
     min-width: 250px;
     max-width: 380px;
     box-shadow: 0 0 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    margin-bottom: 9%;
+    margin-top: 8%;
 }
 
-a.imagescote div {
-
-}
 
 a.imagescote img {
     width: 100%; 
