--- a/styles.css
+++ b/styles.css
@@ -237,7 +237,7 @@ a.images {
     border-radius: 20px 20px 20px 20px;
     width: 100%;
     min-width: 300px;
-    min-height: 180px;
+    min-height: 224px;
     max-height: 236px;
     max-width: 300px;
     text-decoration: none;
@@ -258,6 +258,11 @@ a.images img {
 .description {
     margin-left: 7%;;
     margin-top: -4%;
+    min-height: 92px;
+}
+
+.description p {
+    line-height: 1.5;
 }
 
 .description span {
@@ -274,10 +279,11 @@ a.images img {
 }
  
 .etoiles {
-    margin-top: -4%;
+    margin-top: -9%;
     margin-bottom: 3%;
     display: flex;
     flex-direction: row;
+    align-self: flex-end;
 }
 
 .etoilespleines {
@@ -307,6 +313,7 @@ a.images img {
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+    align-self: flex-start;
     margin-left: 10%;
     margin-right: 10%;
 }
