--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,7 @@ nav li {
 
 a.bouton1 {
     text-decoration: none;
+    color: black;
 }
 
 a.bouton1:visited {
@@ -94,7 +95,6 @@ main {
     border: 15px solid;
     border-radius: 10px 0 0 10px;
     border-color: #F2F2F2;
-    font-size: 15px;
     float: left;
 }
 
@@ -256,9 +256,10 @@ a.images img {
 }
 
 .description {
-    margin-left: 7%;;
+    margin-left: 7%;
     margin-top: -4%;
     min-height: 92px;
+    position: relative;
 }
 
 .description p {
@@ -279,11 +280,11 @@ a.images img {
 }
  
 .etoiles {
-    margin-top: -9%;
-    margin-bottom: 3%;
+    margin-bottom: 3px;
     display: flex;
     flex-direction: row;
-    align-self: flex-end;
+    position: absolute;
+    bottom: 5px; 
 }
 
 .etoilespleines {
@@ -308,6 +309,17 @@ a.images img {
     min-width: 350px;
 }
 
+.descriptionpop {
+    margin-left: 7%;;
+    margin-top: -4%;
+    min-height: 92px;
+    position: relative;
+}
+
+.descriptionpop p {
+    line-height: 1.5;
+}
+
 #entete {
     display: flex;
     flex-direction: row;
@@ -327,9 +339,11 @@ a.imagescote {
     text-decoration: none;
     color: black;
     min-width: 250px;
-    max-width: 380px;
+    max-width: 350px;
     box-shadow: 0 0 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     margin-top: 8%;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 
@@ -343,6 +357,14 @@ a.imagescote img {
     border-radius: 20px 0 0 20px;
     float: left;
     object-fit: cover;
+}
+
+.etoilespop {
+    margin-bottom: 3px;
+    display: flex;
+    flex-direction: row;
+    position: absolute;
+    bottom: 10px; 
 }
 
 /*Activités*/
@@ -398,7 +420,6 @@ a.moyimages {
 
 a.moyimages img {
     width: 100%;
-    min-width: 350px;
     width: 400px;
     max-height: 150px;
     height: 100%;
@@ -427,3 +448,4 @@ footer div p a {
     text-decoration: none;
     color: black;
 }
+
